--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 node_modules
 package-lock.json
 .env
+
+node_modules
+.env
+coverage
+coverage.json
+typechain
+
+#Hardhat files
+cache
+artifacts
