--- a/package.json
+++ b/package.json
@@ -1,43 +1,52 @@
 {
-  "name": "hbar-dapp",
-  "version": "1.0.0",
-  "description": "HBAR Dapp using HEDERA tools and development to build an complete DAPP.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/RafaBlockDev/HBAR-DAPP.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/RafaBlockDev/HBAR-DAPP/issues"
-  },
-  "homepage": "https://github.com/RafaBlockDev/HBAR-DAPP#readme",
+  "name": "Presale",
+  "version": "0.1.0",
+  "homepage": "",
+  "private": true,
   "dependencies": {
-    "@hashgraph/sdk": "^2.14.2",
-    "dotenv": "^16.0.1",
-    "@nomiclabs/hardhat-ethers": "^2.0.6",
-    "@nomiclabs/hardhat-etherscan": "^3.0.3",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "chai": "^4.3.6",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-promise": "^5.2.0",
-    "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.7",
-    "hardhat": "^2.9.6",
-    "hardhat-gas-reporter": "^1.0.8",
-    "prettier": "^2.6.2",
-    "prettier-plugin-solidity": "^1.0.0-beta.13",
-    "solhint": "^3.3.7",
-    "solidity-coverage": "^0.7.21"
+    "@crossmint/client-sdk-react-ui": "^0.2.7-alpha.8",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@web3modal/ethereum": "^2.0.0-beta.10",
+    "@web3modal/react": "^2.0.0-beta.10",
+    "dotenv": "^16.0.2",
+    "ethereum-checksum-address": "^0.0.8",
+    "ethers": "^5.7.2",
+    "fs": "^0.0.1-security",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.3.9",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "react-social-icons": "^5.15.0",
+    "react-toastify": "^9.1.1",
+    "wagmi": "^0.9.4",
+    "web-vitals": "^2.1.4",
+    "web3modal": "^1.9.12"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
