feat: init with tailwindcss

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "octaocean-test",
-  "private": true,
+  "name": "my-project",
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
@@ -10,18 +9,22 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.0.7",
-    "next": "^13.4.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
-    "viem": "~1.1.8",
-    "wagmi": "~1.3.2"
+    "fs": "^0.0.1-security",
+    "next": "13.4.12",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "viem": "^1.5.0",
+    "wagmi": "^1.3.9"
   },
   "devDependencies": {
-    "@types/node": "^18.16.12",
-    "@types/react": "^18.2.6",
-    "eslint": "^8.15.0",
-    "eslint-config-next": "^13.4.3",
-    "typescript": "^5.0.4"
+    "@types/node": "20.4.5",
+    "@types/react": "18.2.18",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "^10.4.14",
+    "eslint": "8.46.0",
+    "eslint-config-next": "13.4.12",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
+    "typescript": "5.1.6"
   }
 }
