--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "ethers": "^6.6.7",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
